--- a/Vanado/ClientApp/package.json
+++ b/Vanado/ClientApp/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
+    "node-sass": "^4.14.1",
     "oidc-client": "^1.9.0",
+    "query-string": "^6.13.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
